# FizzBuzz

./: .gitignore  FizzBuzz.cabal  LICENSE  Makefile  fizzbuzz.go  fizzbuzz.hs
Go/: Makefile  fizzbuzz_test.go
Haskell/: FizzBuzz'.hs  FizzBuzz.cabal  FizzBuzz.hs  Makefile  doctests.hs
Kotlin/: pom.xml
Kotlin/src/main/kotlin/: FizzBuzz.kt
Kotlin/src/test/kotlin/: FizzBuzzSpec.kt
OCaml/: Makefile  fizzbuzz.ml  main.ml  prepare_osx.sh  test_fizzbuzz.ml
Python/: Makefile  fizzbuzz.py
Rust/: Cargo.toml  Makefile
Rust/src/: lib.rs  main.rs
Rust/tests/: lib.rs
Scala/: build.sbt
Scala/src/main/scala/: FizzBuzz.scala  Main.scala
Scala/src/test/scala/: FizzBuzzSpec.scala
src/main/scala/: FizzBuzz.scala
src/test/haskell/: doctests.hs
